update bootstrap from 4 to 5, fix spacing

--- a/app.css
+++ b/app.css
@@ -39,6 +39,10 @@ body {
     color: #EA1C2C;
 }
 
+.navbar {
+    background: rgba(222, 192, 222, 0.3);
+}
+
 .navbar.scrolled {
     background: rgba(222, 192, 222, 0.9);
     transition: background .5s;
